tests/error/type_errors/unitary_function_return_error.py
from guppylang.decorator import guppy
from guppylang.std.quantum import qubit


@guppy.unitary
class foo:

    @guppy
    def __call__(q: qubit) -> None:
        return 0

foo.compile()
