tests/error/type_errors/unitary_function_return_error.err
Error: Type mismatch (at $FILE:10:15)
   | 
 8 |     @guppy
 9 |     def __call__(q: qubit) -> None:
10 |         return 0
   |                ^ Expected return value of type `None`, got `int`

Guppy compilation failed due to 1 previous error
